--- a/Task_App/package.json
+++ b/Task_App/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5"
